--- a/app/index.html
+++ b/app/index.html
@@ -69,7 +69,7 @@
             <h4 class="modal-title">Goose Watch 2.0</h4>
           </div>
           <div class="modal-body">
-            <p>This is a simple app which plots the location of all goose nests on the University of Waterloo canvas.  Data sourced from the uWateloo API.</p>
+            <p>This is a simple app which plots the location of all goose nests on the University of Waterloo campus.  All data is sourced from the uWaterloo API.</p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
