--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
       <div class="container">
         <p class='clearfix'>
           <span data-toggle='modal' data-target='#about' style='cursor: pointer;'>About This Project</span>
-          <span class='pull-right'><a href="https://www.student.cs.uwaterloo.ca/~kgpenney/" id="websiteLink">Kris Penney</a> &copy; 2015</span>
+          <span class='pull-right'><a href="https://krispenney.github.io" id="websiteLink">Kris Penney</a> &copy; 2015</span>
         </p>
       </div>
     </div>
